--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
         "prisma:migrate": "prisma migrate dev"
     },
     "dependencies": {
+        "@auth0/nextjs-auth0": "^3.5.0",
         "@prisma/client": "^5.19.1",
+        "auth0": "^4.10.0",
+        "axios": "^1.7.7",
         "next": "14.2.7",
         "react": "^18",
         "react-dom": "^18"
